<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/defTextView"
            android:layout_width="411dp"
            android:layout_height="115dp"
            android:text="@string/def"
            android:textColor="#240000"
            android:textSize="24sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="834dp"
        android:layout_height="172dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="432dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonTerm1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/txtTerm1" />

            <Button
                android:id="@+id/buttonTerm2"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/txtTerm2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonTerm3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/txtTerm3" />

            <Button
                android:id="@+id/buttonTerm4"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/txtTerm4" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="434dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.96">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txtNext" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>