<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtYourName"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/markTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtMark"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tryAgainQuizButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTryAgain" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>